--- a/src/clik.csproj
+++ b/src/clik.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <!-- <ImplicitUsings>enable</ImplicitUsings> -->
     <!-- <Nullable>enable</Nullable> -->
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
     <Authors>Goncalo Oliveira</Authors>
     <Description>CLI Kit</Description>
     <RepositoryUrl>https://github.com/goncalo-oliveira/cli-kit</RepositoryUrl>
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
+    <PackageReference Include="ShellProgressBar" Version="5.1.0" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
 
